[gd_scene load_steps=6 format=3 uid="uid://yyqlhh3cjdh6"]

[ext_resource type="PackedScene" uid="uid://1hq6qpr1oa3i" path="res://Scenes/AdvButton.tscn" id="1"]
[ext_resource type="Texture2D" uid="uid://cm6qrejg1itog" path="res://Graphics/Icons/Arrow.png" id="2"]
[ext_resource type="Theme" uid="uid://cp2u1kgj60ic" path="res://Resources/default_theme.tres" id="3"]
[ext_resource type="Script" path="res://Scripts/UpgradePanel.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://ddf2xjwcht77u" path="res://Scenes/CloseButton.tscn" id="5"]

[node name="UpgradePanel" type="Panel"]
custom_minimum_size = Vector2(768, 368)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -184.0
offset_right = 384.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("3")
script = ExtResource("4")

[node name="PathButtons" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 35)
layout_mode = 0
anchor_right = 1.0
offset_left = 8.0
offset_top = 40.0
offset_right = -8.0
offset_bottom = 75.0
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Path1" parent="PathButtons" instance=ExtResource("1")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Path2" parent="PathButtons" instance=ExtResource("1")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Path3" parent="PathButtons" instance=ExtResource("1")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Current" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_bottom = 24.0
grow_vertical = 2
size_flags_horizontal = 3
bbcode_enabled = true
scroll_active = false

[node name="Arrow" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.635294)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -72.0
offset_right = 32.0
offset_bottom = -24.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="Next" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 384.0
offset_bottom = 24.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_active = false

[node name="CurrentLv" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -64.0
offset_right = -160.0
offset_bottom = -32.0
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentLv2" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = -64.0
offset_right = 174.0
offset_bottom = -32.0
text = "LEVEL"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DivBy" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = 96.0
offset_right = 200.0
offset_bottom = 128.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextLv" type="SpinBox" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 184.0
offset_top = -64.0
offset_right = 276.0
offset_bottom = -32.0
value = 2.0
rounded = true
allow_greater = true
alignment = 1
select_all_on_focus = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(200, 40)
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -56.0
offset_right = 584.0
offset_bottom = -8.0
vertical_scroll_mode = 3

[node name="Costs" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Upgrade" type="Button" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -56.0
offset_right = -6.0
offset_bottom = -8.0
size_flags_horizontal = 3
theme = ExtResource("3")
text = "UPGRADE"

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 38)
layout_mode = 0
anchor_right = 1.0
offset_bottom = 24.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "UPGRADE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" parent="." instance=ExtResource("5")]
layout_mode = 1
offset_left = -32.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 32.0

[node name="AutoSpeedup" type="CheckBox" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 56.0
offset_right = 104.0
offset_bottom = 84.0
theme = ExtResource("3")
text = "AUTO_SPEEDUP"

[connection signal="pressed" from="PathButtons/Path1" to="." method="_on_Path1_pressed"]
[connection signal="pressed" from="PathButtons/Path2" to="." method="_on_Path2_pressed"]
[connection signal="pressed" from="PathButtons/Path3" to="." method="_on_Path3_pressed"]
[connection signal="value_changed" from="NextLv" to="." method="_on_NextLv_value_changed"]
[connection signal="pressed" from="Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="close_button_pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="mouse_entered" from="AutoSpeedup" to="." method="_on_AutoSpeedup_mouse_entered"]
[connection signal="mouse_exited" from="AutoSpeedup" to="." method="_on_AutoSpeedup_mouse_exited"]
[connection signal="pressed" from="AutoSpeedup" to="." method="_on_AutoSpeedup_pressed"]
